<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/ic_home">

        </item>

        <item android:id="@+id/nav_internal"
            android:title="@string/internal_storage"
            android:icon="@drawable/ic_folder">

        </item>

        <item android:id="@+id/nav_sdcard"
            android:title="@string/sd_card"
            android:icon="@drawable/ic_sdcard">

        </item>

        <item android:title="@string/more">
            <menu>
                <item android:id="@+id/nav_about"
                    android:title="@string/about"
                    android:icon="@drawable/ic_about">

                </item>
            </menu>

        </item>
    </group>
</menu>